--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -4,6 +4,7 @@
     {% load static %}
     {% load i18n %}
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ page_name }}</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -11,11 +12,11 @@
 </head>
 <body class="js-modal-container">
 
-    <div class="container-fluid primary_color" style="position: fixed; top: 0; border-bottom: 6px solid white; z-index: 9;">
+    <div class="container-fluid primary_color container_nav_bar">
         <div class="row ">
             <div class="col-sm-2">
                 <a href="{% url 'news_app:home' %}">
-                    <img src="{% static 'media/logo.png' %}" style="width: 200px; height: 63px; margin: 6px 16px">
+                    <img class="nav_bar_logo" src="{% static 'media/logo.png' %}">
                 </a>
 
             </div>
@@ -37,16 +38,16 @@
                     <input type="submit" value="Go">
                 </form>
             </div>
-            <div  class="col-sm-1 js-option-button" style="padding: 0.7% 0 0 4%;">
+            <div  class="col-sm-1 js-option-button option_menu_wrap">
                 {% if request.user.username %}
-                    <img src="{{ request.user.profile_pic.url }}" style="width: 50px; height: 50px; border-radius: 50%;">
+                    <img class="nav_bar_avtar" src="{{ request.user.profile_pic.url }}">
                     <div class="options_account_list">
                         <p><a class="option_item" href="{% url 'user:edit_profile' %}">profile edit</a></p>
                         <p><a class="option_item" href="{% url 'news_app:history' %}">history</a></p>
                         <p class="js-logout"><a class="option_item" href="#">logn out</a></p>
                     </div>
                 {% else %}
-                    <img src="{% static 'media/default.jpg' %}" style="width: 50px; height: 50px; border-radius: 50%;">
+                    <img class="nav_bar_avtar" src="{% static 'media/default.jpg' %}">
                     <div class="options_account_list">
                         <p><a class="option_item" href="{% url 'user:login' %}">logn in</a></p>
                         <p><a class="option_item" href="{% url 'user:email_confirm' %}">sign in</a></p>
@@ -55,16 +56,16 @@
             </div>
         </div>
     </div>
-    <div class="container_logout_verify" style="z-index: 3">
+    <div class="container_logout_verify">
         <div class="row">
             <div class="col-sm-4"></div>
-            <div class="col-sm-4 js-container" style="margin-top: 12%; background-color: #ffff; box-shadow: 0 0 60px 20px #a98fd9; padding: 2% 2% 4% 2%;">
-                <h3 style="font-size: 40px; font-size: 40px; margin: 6% 0 6% 0; text-align: center;">本当にログアウトしますか？</h3>
-                <div class="row" style="margin-left: 22%;">
-                    <button class="col-sm-6 confirm_button yes_button" style="margin: 0 5% 0 10%;">
-                        <a class="yes_button_a" href="{% url 'user:logout' %}" style="color: #b23948;"> はい</a>
+            <div class="col-sm-4 js-container">
+                <h3 class="logout_notify">本当にログアウトしますか？</h3>
+                <div class="row">
+                    <button class="col-sm-6 confirm_button yes_button">
+                        <a class="yes_button_a" href="{% url 'user:logout' %}"> はい</a>
                     </button>
-                    <button class="col-sm-6 confirm_button no_button" style="margin: 0 10% 0 5%;">
+                    <button class="col-sm-6 confirm_button no_button">
                         <a class="no_button_a" href="{% url 'news_app:home' %}"> いいえ</a>
                     </button>
                 </div>
