--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -1,5 +1,27 @@
 /*header*/
-
+.container_nav_bar {
+    position: fixed;
+    top: 0;
+    border-bottom: 6px solid white;
+    z-index: 9;
+}
+.nav_bar_logo {
+    width: 200px; height: 63px; margin: 6px 16px
+}
+.nav_bar_avtar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+..language_out_option {
+        display: block;
+}
+.language_in_option {
+    display: none;
+}
+.option_menu_wrap {
+    padding: 0.7% 0 0 4%;
+}
 .options_account_list {
     position: absolute;
     text-decoration: none;
@@ -39,9 +61,30 @@
 }
 
 
-/*body*/
+/*home body*/
 .primary_color {
     background-color: #a98fd9;
+}
+.home_body_container {
+    margin-top: 4%;
+    position: relation;
+    z-index: 0
+}
+.category_followed {
+    font-size: 50px;
+    text-align: center;
+    margin: 40px 0;
+    color: #545454
+}
+.category_item {
+    width: 100%;
+    height: 110px;
+    margin-bottom: 40px;
+}
+.category_item p {
+    font-size: 40px;
+    margin: 0;
+    text-align: center
 }
 .category_button.active {
     background-color: #e2d9f3 !important;
@@ -84,11 +127,24 @@
     transition: ease-in 200ms,
     ease-out 200ms;
 }
+.wrap_plus_button {
+    position: relative;
+}
+.plus_button {
+    border-radius: 50%;
+    border: none;
+    position: absolute;
+    bottom: -20px;
+    height: 80px;
+    width: 80px;
+    right: 60%;
+}
 .plus_button:hover .plus_icon{
     color: #a98fd9 ;
 }
 .plus_icon {
     color: white ;
+    font-size: 50px;
 }
 
 /* logout-verify */
@@ -104,10 +160,11 @@
 .yes_button {
     background-color: #e35d6a;
     transition: 0.2s;
+    margin: 0 5% 0 10%;
 }
 .yes_button_a {
     text-decoration: none;
-    color: #ffff !important;
+    color: #b23948;
 }
 .yes_button:hover {
     background-color: #e2d9f3;
@@ -118,6 +175,7 @@
 .no_button {
     background-color: #75b798;
     transition: 0.2s;
+    margin: 0 10% 0 5%;
 }
 .no_button_a {
     text-decoration: none;
@@ -137,10 +195,28 @@
     right: 0;
     background-color: rgba(226, 217, 243, 0.8);
     display: none;
+    z-index: 3;
 }
 .container_logout_verify.open{
     display: block;
 }
+.js-container {
+    margin-top: 12%;
+    background-color: #ffff;
+    box-shadow: 0 0 60px 20px #a98fd9;
+    padding: 2% 2% 4% 2%;
+}
+.js-container div {
+    margin-left: 22%;
+}
+
+.logout_notify {
+    font-size: 40px;
+    font-size: 40px;
+    margin: 6% 0 6% 0;
+    text-align: center;
+}
+
 /* Comment */
 .comment_input {
     width: 100%;
@@ -155,6 +231,35 @@
     box-shadow: 0 0 10px 0 #a98fd9;
     border: none;
 }
+/* log in */
+.login_container {
+    border: 1px solid black;
+    box-shadow: 0 0 100px 8px #a98fd9;
+    padding: 2%;
+    border: none;
+}
+.login_wrap {
+    margin-top: 6%
+}
+.login_button {
+    width: 30%;
+}
+.login_label {
+    font-size: 26px;
+    font-weight: 600;
+    color: #5f6368;
+    text-align: center;
+}
+.label_form {
+    font-size: 22px;
+    color: #5f6368;
+}
+.input_form {
+    width: 100%;
+    padding: 1% 2%;
+    margin: 2% 0 4% 0;
+}
+
 
 /* news_detail */
 .save ,
@@ -243,3 +348,89 @@
     transition: 0.1s
 }
 
+/* Mobile */
+@media only screen and (max-width: 46.1875em) {
+    .login_button {
+        width: 38%;
+        height: 48px;
+    }
+    /* head */
+    .container_nav_bar {
+        height: 5em;
+        position: relation;
+    }
+    .nav_bar_logo {
+        width: 150px;
+        height: 42px;
+        margin: 16px 0px;
+    }
+    .option_menu_wrap {
+        position: absolute;
+        top: 12%;
+        left: 80%;
+    }
+    .options_account_list {
+        width: 42%;
+        right: 80%;
+        top: 125%;
+    }
+    .options_account_list::after {
+        display: none;
+    }
+    .options_account_list p {
+        padding: 10px 14px;
+    }
+    .language_out_option {
+        display: none;
+    }
+    .language_in_option {
+        display: block;
+        background-color: #e2d9f3;
+        padding-left: 6px;
+    }
+    .language_in_option select{
+        border: none;
+        box-shadow: 0 0 6px 2px #a98fd9;
+    }
+    /* home body*/
+    .category_followed {
+        margin: 80px 0 24px 0;
+        font-size: 244%;
+
+    }
+    .category_item {
+        width: 100%;
+        height: 14%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .category_item p {
+        font-size: 30px;
+    }
+    .wrap_plus_button {
+        height: 110px;
+    }
+    .plus_button {
+        right: 3%;
+        width: 70px;
+        height: 70px
+    }
+    /* log in*/
+    .login_wrap {
+        display: flex;
+        justify-content: center;
+        margin-top: 44%
+    }
+    .login_container {
+        width: 76%;
+    }
+}
+/* Ipad */
+@media only screen and (min-width: 46.1875em) and (max-width: 63.9375em) {
+
+}
+/* Pc */
+@media only screen and (min-width: 64em) {
+
+}
