--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -124,7 +124,71 @@
     border-style: solid;
     border-color: transparent transparent #e2d9f3 transparent;
 }
-
+.wiki_container {
+    position: fixed;
+    bottom: 6%;
+}
+.wiki_button {
+    font-size: 34px;
+    background-color: #a98fd9;
+    padding: 0 10px;
+    z-index: 9;
+    border-top-right-radius: 16px;
+    border-bottom-left-radius: 16px;
+}
+.wiki_button i {
+    color: white;
+}
+.chat_box_container {
+    width: 17%;
+    position: fixed;
+    right: 5%;
+    height: 47%;
+    bottom: 9%;
+    background-color: #a98fd9;
+    border-radius: 8px;
+    display: none;
+}
+.chat_box_container.open{
+    display: block;
+}
+.chat_box_body {
+    background-color: #e2d9f3;
+    width: 100%;
+    height: 86%;
+    margin-bottom: 8px;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+}
+.chat_box_food {
+    display: flex;
+}
+.chat_box_input {
+    border-top-right-radius: 16px;
+    border-bottom-left-radius: 16px;
+    background-color: #e2d9f3;
+    padding: 0 0 0 10px;
+    border: none;
+    font-size: 14px;
+    flex: 9;
+    margin: 0 0 0 10px;
+}
+.chat_box_input:focus {
+    outline:none
+}
+.submit_button {
+    font-size: 24px;
+    padding: 0 7px 0 11px;
+    border-top-right-radius: 14px;
+    border-bottom-left-radius: 14px;
+    border: none;
+    flex: 1;
+    margin: 0 10px 0 10px;
+    background-color: #e2d9f3;
+}
+.submit_button i{
+    color: #a98fd9;
+}
 
 /*home body*/
 .primary_color {
@@ -273,7 +337,7 @@
 .js-logout-container {
     margin-top: 12%;
     width: 600px;
-    height: 220px;
+    height: 270px;
     background-color: #ffff;
     box-shadow: 0 0 60px 20px #a98fd9;
     padding: 2% 2% 4% 2%;
@@ -341,7 +405,6 @@
 /* category page */
 .category_page_name {
     font-size: 50px;
-    text-align:
     center; margin: 40px 0;
     color: #545454;
 }
@@ -488,6 +551,49 @@
     box-shadow: 0 0 20px 8px;
     transition: 0.1s
 }
+/* Error */
+    .ErrorBody {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        margin-top: 110px;
+        padding: 0;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    .error-container {
+        padding: 50px;
+        max-width: 700px;
+        background-color: #fff;
+        box-shadow: 0 0 100px 8px #a98fd9;
+        width: 100%;
+        text-align: center;
+    }
+    .error-icon {
+        color: #f00;
+        font-size: 52px;
+    }
+    .error-message {
+        color: #333;
+        font-size: 26px;
+        margin-top: 10px;
+    }
+    .ComeBackButton {
+        font-size: 32px;
+        padding: 6px 20px;
+        margin-top: 36px;
+        border: none;
+        background: white;
+        box-shadow: 0 0 36px 10px #a98fd9;
+        border-top-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+    .ComeBackButton:hover {
+        background-color: #bca8e1;
+        box-shadow: 0 0 36px 10px #a98fd9;
+        transition: 0.3s;
+        cursor: pointer;
+    }
 
 /* Mobile */
 @media only screen and (max-width: 46.1875em) {
